fixed notification list horizontal overflow in loading state

--- a/ui/src/components/Notification/Notification.scss
+++ b/ui/src/components/Notification/Notification.scss
@@ -7,6 +7,7 @@ $notification-items-padding: 1px;
   padding: $aleph-grid-size*1.3 0;
   line-height: 1.5em;
   border-bottom: 1px solid $aleph-border-color;
+  overflow: hidden;
   display: flex;
   justify-content: space-between;
 
